chore: replace Antigrafity with synapse across project

--- a/libs/shared-types/src/locales/ar/auth.json
+++ b/libs/shared-types/src/locales/ar/auth.json
@@ -20,7 +20,7 @@
     "register": "سجل الآن"
   },
   "register": {
-    "title": "Antygraviti",
+    "title": "Synapse",
     "subtitle": "إنشاء حساب جديد",
     "cardTitle": "تسجيل",
     "cardDescription": "املأ النموذج أدناه لإنشاء حساب",
