--- a/libs/shared-types/src/locales/en/auth.json
+++ b/libs/shared-types/src/locales/en/auth.json
@@ -20,7 +20,7 @@
     "register": "Register Now"
   },
   "register": {
-    "title": "Antygraviti",
+    "title": "Synapse",
     "subtitle": "Create new account",
     "cardTitle": "Register",
     "cardDescription": "Fill the form below to create an account",
