--- a/libs/shared-types/src/locales/id/auth.json
+++ b/libs/shared-types/src/locales/id/auth.json
@@ -20,7 +20,7 @@
     "register": "Daftar Sekarang"
   },
   "register": {
-    "title": "Antygraviti",
+    "title": "Synapse",
     "subtitle": "Buat akun baru",
     "cardTitle": "Register",
     "cardDescription": "Isi form berikut untuk membuat akun",
